Added first 2 sections templates

--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
 	<script src="javascripts/main.js"></script>
 </head>
 <body>
-
+	<div class="section red" id="header">
+		<div class="sectionTop">
+			<img class="imageCenter" src="images/logo.png">
+			<h3 class="logoSubtitle">A team of self confessed geeks who are all about great digital design</h3>
+		</div>
+		<div class="sectionBottom">
+			<div class="scrollButton"></div>
+		</div>
+	</div>
+	<div class="section lightGray" id="header">
+		<div class="sectionTop">
+			<img class="drawing" src="images/drawing1.png">
+		</div>
+		<div class="sectionBottom">
+			<h3 class="drawingSubtitle">Some agencies love design but don't know how to build</h3>
+			<div class="scrollButton redButton"></div>
+		</div>
+	</div>
 </body>
 </html>
