added include-media lib for sass media queries

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<img class="drawing" src="images/drawing1.png">
 		</div>
 		<div class="sectionBottom">
-			<h3 class="drawingSubtitle">Some agencies love design but don't know how to build</h3>
+			<h3 class="drawingSubtitle">Some agencies love <strong>design</strong> but don't know how to build</h3>
 			<div class="scrollButton redButton"></div>
 		</div>
 	</div>
