--- a/index.html
+++ b/index.html
@@ -20,21 +20,39 @@
 	<script src="javascripts/main.js"></script>
 </head>
 <body>
-	<div class="section red" id="header">
+	<div class="section red" id="section1">
 		<div class="sectionTop">
 			<img class="imageCenter" src="images/logo.png">
 			<h3 class="logoSubtitle">A team of self confessed geeks who are all about great digital design</h3>
 		</div>
 		<div class="sectionBottom">
-			<div class="scrollButton"></div>
+			<div class="scrollButton" role="section2"></div>
 		</div>
 	</div>
-	<div class="section lightGray" id="header">
+	<div class="section lightGray" id="section2">
 		<div class="sectionTop">
 			<img class="drawing" src="images/drawing1.png">
 		</div>
 		<div class="sectionBottom">
 			<h3 class="drawingSubtitle">Some agencies love <strong>design</strong> but don't know how to build</h3>
+			<div class="scrollButton redButton" role="section3"></div>
+		</div>
+	</div>
+	<div class="section lightGray" id="section3">
+		<div class="sectionTop">
+			<img class="drawing" src="images/drawing2.png">
+		</div>
+		<div class="sectionBottom">
+			<h3 class="drawingSubtitle">Some agencies know how to <strong>build</strong> but can't do design</h3>
+			<div class="scrollButton redButton" role="section4"></div>
+		</div>
+	</div>
+	<div class="section lightGray" id="section4">
+		<div class="sectionTop">
+			<img class="drawing" src="images/drawing3.png">
+		</div>
+		<div class="sectionBottom">
+			<h3 class="drawingSubtitle">We love <strong>both</strong></h3>
 			<div class="scrollButton redButton"></div>
 		</div>
 	</div>
