Services section added along with OWLcarousel

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Geek Label</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+	<!-- FavIcon -->
+	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 	<!-- Default Compass Styles -->
 	<link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
 	<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />	
@@ -20,7 +22,7 @@
 	<script src="javascripts/main.js"></script>
 </head>
 <body>
-	<div class="section red" id="section1">
+	<div class="section redBG" id="section1">
 		<div class="sectionTop">
 			<img class="imageCenter" src="images/logo.png">
 			<h3 class="logoSubtitle">A team of self confessed geeks who are all about great digital design</h3>
@@ -29,7 +31,7 @@
 			<div class="scrollButton" role="section2"></div>
 		</div>
 	</div>
-	<div class="section lightGray" id="section2">
+	<div class="section lightGrayBG" id="section2">
 		<div class="sectionTop">
 			<img class="drawing" src="images/drawing1.png">
 		</div>
@@ -38,7 +40,7 @@
 			<div class="scrollButton redButton" role="section3"></div>
 		</div>
 	</div>
-	<div class="section lightGray" id="section3">
+	<div class="section lightGrayBG" id="section3">
 		<div class="sectionTop">
 			<img class="drawing" src="images/drawing2.png">
 		</div>
@@ -47,13 +49,65 @@
 			<div class="scrollButton redButton" role="section4"></div>
 		</div>
 	</div>
-	<div class="section lightGray" id="section4">
+	<div class="section lightGrayBG" id="section4">
 		<div class="sectionTop">
 			<img class="drawing" src="images/drawing3.png">
 		</div>
 		<div class="sectionBottom">
 			<h3 class="drawingSubtitle">We love <strong>both</strong></h3>
-			<div class="scrollButton redButton"></div>
+			<div class="scrollButton redButton" role="section5"></div>
+		</div>
+	</div>
+	<div class="section whiteBG" id="section5">
+		<div class="sectionTop">
+			<h1 class="titleWithMargin">Services</h1>
+			<div class="servicesContainer">
+				<div class="col-md-3 serviceColumn">
+					<div class="circle service1"></div>
+					<h4 class="circleSubtitle">Web Development</h4>
+				</div>
+				<div class="col-md-3 serviceColumn">
+					<div class="circle service2"></div>
+					<h4 class="circleSubtitle">Design</h4>
+				</div>
+				<div class="col-md-3 serviceColumn">
+					<div class="circle service3"></div>
+					<h4 class="circleSubtitle">Branding</h4>
+				</div>
+				<div class="col-md-3 serviceColumn">
+					<div class="circle service4"></div>
+					<h4 class="circleSubtitle">UX Research</h4>
+				</div>
+			</div>
+		</div>
+		<div class="sectionBottom">
+			<div class="scrollButton blackButton" role="section6"></div>
+		</div>
+	</div>
+	<div class="section lightGrayBG" id="section6">
+		<div class="sectionTop">
+			<h1 class="titleWithMargin">Clients</h1>
+			<div class="servicesContainer">
+				<div class="col-md-3 serviceColumn">
+					<div class="circle service1"></div>
+					<h4 class="circleSubtitle">Web Development</h4>
+				</div>
+				<div class="col-md-3 serviceColumn">
+					<div class="circle service2"></div>
+					<h4 class="circleSubtitle">Design</h4>
+				</div>
+				<div class="col-md-3 serviceColumn">
+					<div class="circle service3"></div>
+					<h4 class="circleSubtitle">Branding</h4>
+				</div>
+				<div class="col-md-3 serviceColumn">
+					<div class="circle service4"></div>
+					<h4 class="circleSubtitle">UX Research</h4>
+				</div>
+			</div>
+		</div>
+		<div class="sectionBottom">
+			<div class="scrollButton blackButton"></div>
 		</div>
 	</div>
 </body>
