Code finished and FavIcon added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 	<script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer></script>
 </head>
 <body>
+	<!-- HEADER -->
 	<div class="section firstType" id="section1">
 		<div class="sectionTop">
 			<img class="imageCenter" src="images/logo.png">
@@ -41,6 +42,8 @@
 			<div class="scrollButton" role="section2"></div>
 		</div>
 	</div>
+	<!-- END HEADER -->
+	<!-- FIRST DRAWING -->
 	<div class="section secondType" id="section2">
 		<div class="sectionTop">
 			<img class="drawing" src="images/drawing1.png">
@@ -50,6 +53,8 @@
 			<div class="scrollButton redButton" role="section3"></div>
 		</div>
 	</div>
+	<!-- END FIRST DRAWING -->
+	<!-- SECOND DRAWING -->
 	<div class="section secondType" id="section3">
 		<div class="sectionTop">
 			<img class="drawing" src="images/drawing2.png">
@@ -59,6 +64,8 @@
 			<div class="scrollButton redButton" role="section4"></div>
 		</div>
 	</div>
+	<!-- FINISH SECOND DRAWING -->
+	<!-- THIRD DRAWING -->
 	<div class="section secondType" id="section4">
 		<div class="sectionTop">
 			<img class="drawing" src="images/drawing3.png">
@@ -68,6 +75,8 @@
 			<div class="scrollButton redButton" role="section5"></div>
 		</div>
 	</div>
+	<!-- END THIRD DRAWING -->
+	<!-- SERVICES -->
 	<div class="section thirdType" id="section5">
 		<div class="sectionTop">
 			<h1 class="titleWithMargin">Services</h1>
@@ -94,6 +103,8 @@
 			<div class="scrollButton blackButton" role="section6"></div>
 		</div>
 	</div>
+	<!-- END SERVICES -->
+	<!-- CLIENTS -->
 	<div class="section fourthType" id="section6">
 		<div class="sectionTop">
 			<h1 class="titleWithMargin clients">Clients</h1>
@@ -108,6 +119,8 @@
 			<div class="scrollButton blackButton" role="section7"></div>
 		</div>
 	</div>
+	<!-- END CLIENTS -->
+	<!-- MAP -->
 	<div class="section fourthType" id="section7">
 		<div class="sectionTop">
 			<h1 class="titleWithoutMargin" id="mapTitle"></h1>
@@ -119,6 +132,8 @@
 			<div class="scrollButton redButton" role="section8"></div>
 		</div>
 	</div>
+	<!-- END MAP -->
+	<!-- CONTACT -->
 	<div class="section fourthType" id="section8">
 		<div class="sectionTop">
 			<h1 class="titleWithoutMargin">Contact</h1>
@@ -139,5 +154,6 @@
 			<h4 class="circleSubtitle">Or phone on: 01923 220121</h4>
 		</div>
 	</div>
+	<!-- END CONTACT -->
 </body>
 </html>
